--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,19 @@
   <body>
     <div class="wrapper d-flex flex-column min-vh-100">
       {% include 'partials/navbar.html' %}
+      {% comment %} # gestione di messaggi {% endcomment %}
+      {% if messages %}
+        {% for message in messages %}
+          <div class="alert alert-{{ message.tags }} alert-dismissible fade show"
+               role="alert">
+            {{ message }}
+            <button type="button"
+                    class="btn-close"
+                    data-bs-dismiss="alert"
+                    aria-label="Close"></button>
+          </div>
+        {% endfor %}
+      {% endif %}
       <main class="flex-fill">
         {% block content %}{% endblock %}
       </main>
