--- a/templates/catalog/ingredient_form.html
+++ b/templates/catalog/ingredient_form.html
@@ -1,11 +1,9 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
+{% load crispy_forms_tags %}
 {% block content %}
-    <div class="form-container">
-        <form method="POST">
-            <h1>Inserisci un ingrediente</h1>
-            {% csrf_token %}
-            {{ form.as_p }}
-            <button type="submit" class="btn btn-primary">Inserisci</button>
-        </form>
+    <div class="card shadow p-4 mx-auto">
+        <h1>Inserisci un ingrediente</h1>
+        {% csrf_token %}
+        {% crispy form %}
     </div>
-{% endblock %}
+{% endblock content %}
