--- a/templates/crm/contact.html
+++ b/templates/crm/contact.html
@@ -1,13 +1,9 @@
 {% extends 'base.html' %}
+{% load crispy_forms_tags %}
 {% block content %}
     <div class="container py-5 text-center">
         <h1 class="mb-4 text-center">Contattaci</h1>
-        <form method="post" class="mx-auto">
-            {% csrf_token %}
-            <div class="mb-5">{{ form.as_p }}</div>
-            <div class="text-center">
-                <button type="submit" class="btn btn-primary">Invia</button>
-            </div>
-        </form>
+        {% csrf_token %}
+        {% crispy form %}
     </div>
 {% endblock %}
