--- a/templates/ecommerce/partials/cart_form.html
+++ b/templates/ecommerce/partials/cart_form.html
@@ -1,4 +1,4 @@
-<form method="post"action="{% url 'add_to_cart' %}">
+<form method="post" action="{% url 'add_to_cart' %}" class="">
     {% csrf_token %}
     {{ dish.get_add_to_cart_form.as_p }}
     <button type="submit" class="btn btn-primary w-100">
