--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -62,7 +62,7 @@
                     <h5 class="mb-3">Le Nostre Portate</h5>
                     {% for course in courses_list %}
                         <li class="mb-2">
-                            <a href="">{{ course.title }}</a>
+                            <a href="">{{ course.name }}</a>
                         </li>
                     {% endfor %}
                 </div>
