--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -1,10 +1,12 @@
 {% extends "base.html" %}
 {% block title %}Change the password{% endblock %}
 {% block content %}
-    <h1>Cambia la tua password</h1>
-    <form method="POST">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" value="Salva la nuova password">
-    </form>
+    <div class="card shadow p-4 mx-auto col-sm-6">
+        <h1 class="text-center mb-4">Cambia la tua password</h1>
+        <form method="POST" class="text-center mb-4">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <input type="submit" class="btn btn-primary value="Salva la nuova password">
+        </form>
+    </div>
 {% endblock %}
