--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -1,8 +1,9 @@
 {% extends 'base.html' %}
-{% block title %}Password reset complete{% endblock %}
 {% block content %}
-    <h1>Reset della password completato</h1>
-    <p>
-        La nuova password è stata impostata. Ora puoi accedere su<a href=" {% url 'login' %}">pagina login</a>.
-    </p>
+    <div class="card shadow p-4 mx-auto col-sm-6">
+        <h1 class="text-center mb-4">Reset della password completato</h1>
+        <p class="text-center mb-4">
+            La nuova password è stata impostata. Ora puoi accedere su<a href=" {% url 'login' %}" class="btn btn-primary">pagina login</a>.
+        </p>
+    </div>
 {% endblock %}
