--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -1,11 +1,13 @@
 {% extends 'base.html' %}
 {% block title %}Forgot Your Password?{% endblock %}
 {% block content %}
-    <h1>Scordato la Password?</h1>
-    <p>Entra la tua mail qui sotto e ti invieremo le istruzioni per reinpostarla</p>
-    <form method="POST">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" value="Inviami le istruzioni!">
-    </form>
+    <div class="card shadow p-4 mx-auto col-sm-6">
+        <h1 class="text-center mb-4">Scordato la Password?</h1>
+        <p class="text-center mb-4">Entra la tua mail qui sotto e ti invieremo le istruzioni per reinpostarla</p>
+        <form method="post" class="text-center mb-4">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <input type="submit" class="btn btn-primary" value="Inviami le istruzioni!">
+        </form>
+    </div>
 {% endblock %}
