--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
-{% block title %}Sign Up{% endblock %}
 {% block content %}
-    <h2>Sign up</h2>
-    <form method="post">
-        {% csrf_token %}
-        {{ form }}
-        <button type="submit">Sign Up</button>
-    </form>
-{% endblock %}
+    <div class="card shadow p-4 mx-auto col-sm-6">
+        <h1 class="text-center mb-4">Registrati</h1>
+        <form method="post" class="text-center mb-4">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button type="submit" class="btn btn-primary">Registrati</button>
+        </form>
+    {% endblock %}
