--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -2,6 +2,7 @@
     {% load static %}
     <nav class="navbar">
         <div class="container-fluid">
+            {% comment %} {% include 'partials/sidebar.html' %}  SIDEBAR {% endcomment %}
             <a class="navbar-brand" href="{% url 'home' %}">
                 <img class="logo"
                      src="{% static 'dishes/logo.png' %}"
