--- a/templates/partials/sidebar.html
+++ b/templates/partials/sidebar.html
@@ -1,5 +1,22 @@
-{% comment %} {% block sidebar %}
-<div class="sidenav">
-  <a href="/">Home</a>
-  <a href="/">Bella sta sidebar</a>
-{% endblock %}   {% endcomment %}
+{% comment %} {% load static %}
+{% block header %}
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">The Logo</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Work</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+{% endblock %} {% endcomment %}
