--- a/templates/registration/password_change_done.html
+++ b/templates/registration/password_change_done.html
@@ -4,6 +4,6 @@
     <h1>Password cambiata con successo</h1>
     <p>La tua password è stata aggiornata correttamente</p>
     <p>
-        <a href="{% url 'login' %}">Accedi</a> con la nuova password.
+        <a href="{% url 'login' %}" class="btn btn-primary">Accedi</a> con la nuova password.
     </p>
 {% endblock %}
