--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -1,14 +1,16 @@
 {% extends "base.html" %}
 {% block title %}Inserisci la nuova password{% endblock %}
 {% block content %}
-    {% if validlink %}
-        <h1>Imposta la nuova password!</h1>
-        <form method="POST">
-            {% csrf_token %}
-            {{ form.as_p }}
-            <input type="submit" value="Change my password">
-        </form>
-    {% else %}
-        <p>Il link di reset non è valido, forse perchè è stato già usato. Richiedi un nuovo reset della password.</p>
-    {% endif %}
+    <div class="card shadow p-4 mx-auto col-sm-6">
+        {% if validlink %}
+            <h1 class="text-center mb-4">Imposta la nuova password!</h1>
+            <form method="POST" class="text-center mb-4">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <input type="submit" class="btn btn-primary value="Change my password">
+            </form>
+        {% else %}
+            <p>Il link di reset non è valido, forse perchè è stato già usato. Richiedi un nuovo reset della password.</p>
+        {% endif %}
+    </div>
 {% endblock %}
