--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -33,7 +33,7 @@
                         </form>
                     </div>
                 {% else %}
-                    <span class="navbar-text me-2">Non sei loggato, vergognati</span>
+                    <span class="navbar-text me-2">Non sei loggato -</span>
                     <a href="{% url 'login' %}" class="btn btn-primary btn-sm">Log In</a>
                 {% endif %}
             </div>
