--- a/templates/registration/password_reset_done.html
+++ b/templates/registration/password_reset_done.html
@@ -1,6 +1,10 @@
 {% extends "base.html" %}
 {% block title %}Email Sent{% endblock %}
 {% block content %}
-    <h1>Controlla la tua mail.</h1>
-    <p>Ti abbiamo inviato tutte le istruzioni per modificare la tua password. Riceverai una mail a breve!</p>
+    <div class="card mx-auto col-sm-6">
+        <h1 class="text-center mb-4">Controlla la tua mail.</h1>
+        <p class="text-center mb-4">
+            Ti abbiamo inviato tutte le istruzioni per modificare la tua password. Riceverai una mail a breve!
+        </p>
+    </div>
 {% endblock %}
