--- a/templates/catalog/dish_list.html
+++ b/templates/catalog/dish_list.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-    <div class="dish-header">
+    <div class="container my-5 text-center">
         <h1>Piatti registrati</h1>
         <p>Lista di tutti i piatti registrati a sistema</p>
     </div>
