debug crm la tua opinione

--- a/templates/catalog/catalog_list.html
+++ b/templates/catalog/catalog_list.html
@@ -2,7 +2,7 @@
 {% block title %}Home{% endblock %}
 {% block content %}
     <div class="container my-5 text-center">
-        <h1>Magna che te passa!</h1>
+        <h1>Magna il giusto e fai attivita fisica!</h1>
         <p class="lead">
             Concediti ora una favolosa pausa ricca di sapore e di carboidrati. E'
             scientificamente provato: i nostri piatti ti aiutano a scrivere un codice più performante
