--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -10,4 +10,4 @@
             <input type="submit" class="btn btn-primary" value="Inviami le istruzioni!">
         </form>
     </div>
-{% endblock %}
+{% endblock content %}
